@@ -26,6 +26,12 @@
    category of columns.
  * Fixed bug; One of the changes made in 3.0-beta-04 to the dropdown menu script
    had adverse side effects, so it was reverted.
+ * Fixed bug; On some PHP versions, PDO was not capable of inspecting the LOVD
+   installation using a prepared query, resulting in an error.
+   Closes #10: "error in PDO".
+   Closes #12: "LOVD3 test Edit custom data column Phenotype/Inheritance"
+   (thanks to John-Paul Plazzer, Royal Melbourne Hosp. Australia, for reporting)
+ * Fixed bug; The Phenotype/Inheritance columns was too short for its contents.
 
 
 
